ResourceManager11: Store resource sizes 64-bit.

This prevents possible size count overflow when in 32-bit mode with
a lot of very large resources.

Issue originally reported via Mozilla:
https://bugzilla.mozilla.org/show_bug.cgi?id=1412554

BUG=angleproject:2234

Change-Id: Idacfda98356c13bf22bc493ef7aa2bff1a287f97
Reviewed-on: https://chromium-review.googlesource.com/769749
Commit-Queue: Jamie Madill <jmadill@chromium.org>
Reviewed-by: Jamie Madill <jmadill@chromium.org>